# stm32f429-hal

./: Cargo.toml
src/: dma.rs  flash.rs  gpio.rs  i2c.rs  i2s.rs  lib.rs  rcc.rs  serial.rs  spi.rs  timer.rs  udid.rs  watchdog.rs
