[package]
authors = ["Jorge Aparicio <jorge@japaric.io>", "Astro <astro@spaceboyz.net>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the STM32F429 family of microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "hal"]
license = "MIT OR Apache-2.0"
name = "stm32f429-hal"
repository = "https://github.com/astro/stm32f429-hal"
version = "0.1.2"

[dependencies]
cortex-m = "0.4.0"
embedded-hal = "0.1.2"
nb = "0.1.0"
stm32f429 = "0.3.0"

[dependencies.cast]
default-features = false
version = "0.2.2"

[features]
rt = ["stm32f429/rt"]